manifest/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
spec:
  type: NodePort
  selector:
    app: streamlit-app
  ports:
  - port: 8501
    targetPort: 8501
    nodePort: 30001 # Es el puerto que se expondrá en el nodo del clúster para acceder a la app Streamlit
